public/assets/css/style.css
body {
  background-color: darkslategrey;
  font-family: "IBM Plex Mono", monospace;
}

h1 {
  font-size: 2.5rem;
}

h2 {
  font-size: 1.5rem;
}

h4 {
  font-size: 1.3rem;
}

/* -------------------- HOME PAGE -------------------- */
#nav {
  box-shadow: none;
  -webkit-box-shadow: none;
  background-color: darkslategrey;
}

#nav-chevron {
  margin: 0rem;
  padding: 0;
}

#nav-background {
  width: 22rem;
}

#headshot {
  width: 7.5rem;
  height: 7.5rem;
}

#nav-name,
#nav-email {
  text-align: center;
  width: 17rem;
  margin-left: 1rem;
}

#nav-email {
  padding-bottom: 0rem;
  /* font-size: 0.875rem; */
}

.sidenav li > a {
  font-size: 1rem;
}

#bio-box {
  padding-bottom: 1.5rem;
}

#title-block {
  margin-top: 1.25rem;
}

blockquote {
  margin-left: 1.875rem;
  margin-top: 0.75rem;
  margin-bottom: 0.75rem;
}

blockquote h4,
blockquote h1 {
  margin: 0rem;
  padding-bottom: 0.5rem;
}

#title-bracket-btm {
  margin-top: 0rem;
}
/* -------------------- MY WORK PAGE -------------------- */

/* Setting height for work carousel */
#work-carousel {
  height: 31.25rem;
}

.card {
  width: 18.75rem;
}

.card-title {
  color: white;
  padding-bottom: 0.5rem;
}

#carousel-item {
  width: 18.75rem;
  height: 31.25rem;
}

.card.small .card-image,
.card.medium .card-image,
.card.large .card-image {
  min-height: 70%;
}

.project-subtitle {
  font-size: 1.2rem;
  padding-top: 1.5rem;
  padding-bottom: 1.5rem;
}

.project-description {
  padding-top: 2rem;
  padding-bottom: 2rem;
  min-height: 85%;
  font-size: 1.2rem;
}

.card-link {
  padding-top: 1rem;
  color: darkslategray;
}

.app-link {
  padding-right: 0.5rem;
}

/* -------------------- ABOUT ME PAGE -------------------- */

.card.horizontal .card-image {
  max-width: 35%;
}

#about-pic-div {
  background-color: #00bcd4;
}

#about-pic {
  width: 4rem;
  height: 4rem;
}

.card.horizontal {
  width: 18.75rem;
}

#about-me-detail {
  font-size: 1.1rem;
  text-align: justify;
}

/* -------------------- CONTACT ME PAGE -------------------- */

#contact-me-detail {
  text-align: center;
}

#contact-pic-div {
  background-color: #00bcd4;
}

#contact-me-detail p {
  padding-top: 0.9rem;
  padding-bottom: 0.9rem;
  font-size: 1.1rem;
}

#contact-me-detail a {
  color: darkslategray;
}

#contact-me-detail i {
  padding-right: 0.5rem;
}

/* -------------------- RESPONSIVENESS ------------------- */
/* https://stackoverflow.com/questions/6370690/media-queries-how-to-target-desktop-tablet-and-mobile */

/* smartphones, portrait iPhone, portrait 480x320 phones (Android) */
@media screen and (min-width: 320px) {
}

/* smartphones, Android phones, landscape iPhone */
@media screen and (min-width: 480px) {
  .card.horizontal {
    width: 25rem;
  }
}

/* portrait tablets, portrait iPad, e-readers (Nook/Kindle), landscape 800x480 phones (Android) */
@media screen and (min-width: 600px) {
  h1 {
    font-size: 2.5rem;
  }

  h2 {
    font-size: 1.6rem;
  }

  h3 {
    font-size: 1.5rem;
  }

  h4 {
    font-size: 1.3rem;
  }

  #title-block {
    margin-top: 1.875rem;
  }

  blockquote {
    margin-left: 5rem;
    margin-top: 1.5rem;
  }

  blockquote h4,
  blockquote h1 {
    padding-bottom: 0.75rem;
  }

  #nav-chevron {
    top: 0.625rem;
    right: -1rem;
  }

  .card.horizontal {
    width: 31.25rem;
  }

  #about-pic {
    width: 6rem;
    height: 6rem;
  }
}

/* tablet, landscape iPad, lo-res laptops ands desktops */
@media screen and (min-width: 801px) {
  h1 {
    font-size: 3rem;
  }

  h2 {
    font-size: 1.9rem;
  }

  h3 {
    font-size: 1.875rem;
  }

  h4 {
    font-size: 1.4rem;
  }

  #title-block {
    margin-top: 3.75rem;
  }

  blockquote {
    margin-top: 2.25rem;
  }

  #nav-chevron {
    display: block;
    right: -1.5rem;
  }

  .card.horizontal {
    width: 43.75rem;
  }

  #about-pic {
    width: 8rem;
    height: 8rem;
  }
}

/* big landscape tablets, laptops, and desktops */
@media screen and (min-width: 991px) {
  h1 {
    font-size: 4.2rem;
  }

  h2 {
    font-size: 2.6rem;
  }

  h3 {
    font-size: 2.563rem;
  }

  h4 {
    font-size: 1.5rem;
  }

  #nav-chevron {
    top: 1.25rem;
    right: -2.5rem;
  }

  #nav-chevron i {
    font-size: 1.875rem;
  }

  #nav-name,
  #nav-email {
    width: 16rem;
  }

  #title-block {
    margin-top: 6.25rem;
  }

  #about-me-blockquote {
    margin-top: 1rem;
  }

  .about-me-brackets,
  .contact-me-brackets {
    margin-top: 0rem;
    margin-bottom: 0rem;
    font-size: 2.5rem;
  }

  #about-me-title,
  #contact-me-title {
    font-size: 2.5rem;
  }

  .card.horizontal {
    width: 50rem;
  }

  #about-pic {
    top: 1.313rem;
    bottom: -1.313rem;
    width: 8rem;
    height: 8rem;
  }
}

@media screen and (min-width: 994px) {
  #nav-chevron {
    right: -6.25rem;
  }
}

/* hi-res laptops and desktops */
@media screen and (min-width: 1281px) {
}

